<resources>
    <string name="app_name">Open Camera OMT</string>
    <string name="action_settings">Settings</string>
    <string name="action_popup">Popup settings</string>
    <string name="intro_ok">OK (This message won\'t show again)</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="choose_save_location">Choose save location:</string>
    <string name="clear_folder_history">Clear folder history</string>
    <string name="clear_folder_history_question">Clear folder history?</string>
    <string name="choose_another_folder">Choose another folder</string>
    <string name="changed_save_location">Changed save location to:</string>
    <string name="stopped_recording_video">Stopped recording video</string>
    <string name="repeats_to_go">repeats to go</string>
    <string name="failed_to_reconnect_camera">Failed to reconnect to camera</string>
    <string name="video_may_be_corrupted">Error, video file may be corrupted</string>
    <string name="not_supported">not supported on your device</string>
    <string name="video_error_unknown">Unknown error, video halted</string>
    <string name="video_error_server_died">Server died, video halted</string>
    <string name="video_max_duration">Video reached max duration</string>
    <string name="video_max_filesize">Video reached max file size</string>
    <string name="exposure_compensation">Exposure compensation</string>
    <string name="fps">FPS</string>
    <string name="focus_distance">Focus distance</string>
    <string name="infinite">Infinite</string>
    <string name="front_camera">Front Camera</string>
    <string name="back_camera">Back Camera</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="exposure_locked">Exposure locked</string>
    <string name="exposure_unlocked">Exposure unlocked</string>
    <string name="cancelled_timer">Cancelled timer</string>
    <string name="cancelled_repeat_mode">Cancelled repeat mode</string>
    <string name="started_timer">Started timer</string>
    <string name="failed_to_save_video">Failed to save video file</string>
    <string name="failed_to_record_video">Failed to record video</string>
    <string name="started_recording_video">Started recording video</string>
    <string name="sorry">Sorry</string>
    <string name="failed_to_save_photo">Failed to save photo</string>
    <string name="failed_to_save_photo_raw">Failed to save RAW photo</string>
    <string name="failed_to_auto_stabilise">Failed to auto-level</string>
    <string name="failed_to_start_camera_preview">Failed to start camera preview</string>
    <string name="taking_photo">Taking photo</string>
    <string name="failed_to_take_picture">Failed to take picture</string>
    <string name="location_not_available">GPS location not available</string>
    <string name="photo_deleted">Photo deleted</string>
    <string name="no_gallery_app">No gallery app available</string>
    <string name="screen_is_locked">Screen is locked\nswipe the screen to unlock</string>
    <string name="unlocked">Unlocked</string>
    <string name="auto_stabilise_not_supported">Sorry, auto-level not supported\non this device</string>
    <string name="audio_disabled">Audio disabled</string>
    <string name="max_duration">Max duration</string>
    <string name="color_effect">Color effect</string>
    <string name="scene_mode">Scene mode</string>
    <string name="white_balance">White balance</string>
    <string name="angle">Angle</string>
    <string name="direction">Direction</string>
    <string name="failed_to_open_camera_1">FAILED TO OPEN CAMERA.</string>
    <string name="failed_to_open_camera_2">CAMERA MAY BE IN USE</string>
    <string name="failed_to_open_camera_3">BY ANOTHER APPLICATION?</string>
    <string name="iso">ISO</string>
    <string name="zoom">Zoom</string>
    <string name="free_memory">Free</string>
    <string name="screen_lock_message_1">[LOCKED:</string>
    <string name="screen_lock_message_2">Swipe to unlock]</string>
    <string name="failed_to_stamp">Failed to stamp info to photo</string>
    <string name="metres_abbreviation">m</string>
    <string name="preference_category_camera_effects">Camera Effects</string>
    <string name="preference_auto_stabilise">Auto-level</string>
    <string name="preference_auto_stabilise_summary">Images will be rotated so they are automatically level (photos only) (slower to take photos, and may fail on devices with too low memory)</string>
    <string name="preference_color_effect">Apply a color effect</string>
    <string name="preference_color_effect_summary">Applies the selected color effect to the photo</string>
    <string name="preference_scene_mode">Apply a scene mode</string>
    <string name="preference_scene_mode_summary">Optimise the photo for different scenes</string>
    <string name="preference_white_balance">Set the white balance</string>
    <string name="preference_white_balance_summary">Choose a setting to adjust the white balance</string>
    <string name="preference_iso">Set the ISO</string>
    <string name="preference_iso_summary">A higher value means more sensitive to light (may not work on some devices)</string>
    <string name="preference_exposure">Set the exposure compensation</string>
    <string name="preference_exposure_summary">Set to 0 for the default exposure compensation</string>
    <string name="preference_lock_orientation">Lock photo/video orientation</string>
    <string name="preference_lock_orientation_summary">If set, the orientation of the device will be ignored, and the orientation of the photo/video will be with respect to the specified orientation\n%s</string>
    <string name="preference_face_detection">Face detection</string>
    <string name="preference_face_detection_summary">Use face detection instead of focus areas</string>
    <string name="preference_category_camera_controls">Camera Controls</string>
    <string name="preference_timer">Timer</string>
    <string name="preference_timer_beep">Timer beep</string>
    <string name="preference_timer_beep_summary">Beep when timer is counting down or for repeat mode delay</string>
    <string name="preference_timer_speak">Voice timer countdown</string>
    <string name="preference_timer_speak_summary">Speak the countdown for timer or repeat mode delay (from 60 seconds)</string>
    <string name="preference_burst_mode">Repeat</string>
    <string name="preference_burst_interval">Repeat mode interval</string>
    <string name="preference_lock_video">Lock screen when recording video</string>
    <string name="preference_lock_video_summary">When recording video, the GUI will be locked to prevent accidentally stopping recording. Swipe the screen to unlock. Note that video recording will always stop if the app goes into background or the screen is blanked.</string>
    <string name="preference_force_video_4k">Force 4K UHD video (only works on some devices)</string>
    <string name="preference_force_video_4k_summary">Enable 3840x2160 resolution for video recording on back camera - this option is a hack that may allow 4K devices on 4K cameras that don\'t expose the option to 3rd party camera apps. This isn\'t guaranteed to work, please test before working.</string>
    <string name="preference_video_stabilization">Enable digital video stabilization</string>
    <string name="preference_video_stabilization_summary">Video stabilization reduces the shaking due to the motion of the camera in both the preview and in recorded videos. This may be unnecessary if your device supports optical image stabilization (OIS).</string>
    <string name="preference_video_bitrate">Video bitrate (approx)</string>
    <string name="preference_video_bitrate_summary">Set the approximate bitrate of videos (higher means better quality, but takes up more disk space; may cause video recording to fail if bitrate not supported)\n%s</string>
    <string name="preference_video_fps">Video frame rate (approx)</string>
    <string name="preference_video_fps_summary">Set the frame rate (FPS) of videos (may be approx, not guaranteed to be achieved, and may cause video recording to fail if frame rate not supported). Please check resultant videos to find the actual frame rate used. Note that this setting is ignored for slow motion videos.\n%s</string>
    <string name="preference_video_max_duration">Maximum duration of video</string>
    <string name="preference_video_max_duration_summary">The video recording will stop after the specified duration\n%s</string>
    <string name="preference_video_restart">Restart video after max duration</string>
    <string name="preference_video_restart_summary">If the video has stopped after hitting the maximum duration (if set), this option will make the video restart, up to the specified number of times\n%s</string>
    <string name="preference_video_max_filesize">Maximum file size of video</string>
    <string name="preference_video_max_filesize_summary">The video recording will stop and/or restart (see option below) when the (approximate) maximum file size is reached. Note that many Android devices have a maximum file size for videos (typically around 2GB or 4GB), but this option allows setting a specific value. Note that this option can\'t be used to increase a device\'s built-in maximum.\n%s</string>
    <string name="preference_video_restart_max_filesize">Restart on maximum file size</string>
    <string name="preference_video_restart_max_filesize_summary">Whether to automatically restart when the maximum file size is reached (whether the device default max file size, or user specified)</string>
    <string name="preference_record_audio">Record audio</string>
    <string name="preference_record_audio_summary">Record audio when recording video</string>
    <string name="preference_record_audio_src">Audio source</string>
    <string name="preference_record_audio_src_summary">Microphone to use for recording audio. Note that the exact behaviour of the options depends on how the option is implemented on your device.\n%s</string>
    <string name="preference_record_audio_channels">Audio channels</string>
    <string name="preference_record_audio_channels_summary">Specify mono or stereo for recording audio (stereo only supported on some devices)\n%s</string>
    <string name="preference_video_flash">Flash while recording video</string>
    <string name="preference_video_flash_summary">If enabled, flash will switch on/off when recording video (can be used to tell camera is still recording at a distance)</string>
    <string name="preference_category_video_debugging">Debugging options</string>
    <string name="preference_video_low_power_check">Critical battery check</string>
    <string name="preference_video_low_power_check_summary">Stop video recording if battery level is critically low. This helps reduce the risk of videos being corrupted if your device suddenly switches off due to running out of power.</string>
    <string name="preference_video_subtitle">Video subtitles</string>
    <string name="preference_video_subtitle_summary">Create a subtitles (.SRT) file storing date and time; and also GPS info if location/direction data is enabled. (On Android 11+, this option requires More camera controls/Storage Access Framework to be enabled.)\n%s</string>
    <string name="preference_video_log">Video picture profiles</string>
    <string name="preference_video_log_summary">Set standard or flat picture profile for video mode\n%s</string>
    <string name="preference_video_output_format">Video format</string>
    <string name="preference_video_output_format_summary">Video and audio file format and codecs\n%s</string>
    <string name="preference_video_profile_gamma">Video gamma value</string>
    <string name="preference_video_profile_gamma_summary">Gamma value to use for video if video picture profile is set to Gamma\n%s</string>
</resources>