<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="preferences_root">

    <!--  if we move this to another PreferenceGroup, we should update code to remove this Preference -->
    <!-- title set programmatically -->
    <ListPreference
        android:key="preference_video_quality"
        android:summary="%s"
        />

    <!--  if we move this to another PreferenceGroup, we should update code for the findPreference() call -->
    <SwitchPreference
        android:key="preference_video_stabilization"
        android:title="@string/preference_video_stabilization"
        android:summary="@string/preference_video_stabilization_summary"
        android:defaultValue="false"
        />

    <ListPreference
        android:key="preference_video_output_format"
        android:title="@string/preference_video_output_format"
        android:summary="@string/preference_video_output_format_summary"
        android:entries="@array/preference_video_output_format_entries"
        android:entryValues="@array/preference_video_output_format_values"
        android:defaultValue="preference_video_output_format_default"
        />

    <!--  if we move this to another PreferenceGroup, we should update code for the findPreference() call -->
    <ListPreference
        android:key="preference_video_log"
        android:title="@string/preference_video_log"
        android:summary="@string/preference_video_log_summary"
        android:entries="@array/preference_video_log_entries"
        android:entryValues="@array/preference_video_log_values"
        android:defaultValue="off"
        />

    <!--  if we move this to another PreferenceGroup, we should update code for the findPreference() call -->
    <net.sourceforge.opencamera.ui.ArraySeekBarPreference
        android:key="preference_video_profile_gamma"
        android:title="@string/preference_video_profile_gamma"
        android:summary="@string/preference_video_profile_gamma_summary"
        android:entries="@array/preference_video_profile_gamma_entries"
        android:entryValues="@array/preference_video_profile_gamma_values"
        android:defaultValue="2.2"
        />

    <ListPreference
        android:key="preference_video_max_duration"
        android:title="@string/preference_video_max_duration"
        android:summary="@string/preference_video_max_duration_summary"
        android:entries="@array/preference_video_max_duration_entries"
        android:entryValues="@array/preference_video_max_duration_values"
        android:defaultValue="0"
        />

    <ListPreference
        android:key="preference_video_restart"
        android:title="@string/preference_video_restart"
        android:summary="@string/preference_video_restart_summary"
        android:entries="@array/preference_video_restart_entries"
        android:entryValues="@array/preference_video_restart_values"
        android:defaultValue="0"
        />

    <ListPreference
        android:key="preference_video_max_filesize"
        android:title="@string/preference_video_max_filesize"
        android:summary="@string/preference_video_max_filesize_summary"
        android:entries="@array/preference_video_max_filesize_entries"
        android:entryValues="@array/preference_video_max_filesize_values"
        android:defaultValue="0"
        />

    <SwitchPreference
        android:key="preference_video_restart_max_filesize"
        android:title="@string/preference_video_restart_max_filesize"
        android:summary="@string/preference_video_restart_max_filesize_summary"
        android:defaultValue="true"
        />

    <SwitchPreference
        android:key="preference_record_audio"
        android:title="@string/preference_record_audio"
        android:summary="@string/preference_record_audio_summary"
        android:defaultValue="true"
        />

    <ListPreference
        android:key="preference_record_audio_src"
        android:title="@string/preference_record_audio_src"
        android:summary="@string/preference_record_audio_src_summary"
        android:entries="@array/preference_record_audio_src_entries"
        android:entryValues="@array/preference_record_audio_src_values"
        android:defaultValue="audio_src_camcorder"
        android:dependency="preference_record_audio"
        />

    <ListPreference
        android:key="preference_record_audio_channels"
        android:title="@string/preference_record_audio_channels"
        android:summary="@string/preference_record_audio_channels_summary"
        android:entries="@array/preference_record_audio_channels_entries"
        android:entryValues="@array/preference_record_audio_channels_values"
        android:defaultValue="audio_default"
        android:dependency="preference_record_audio"
        />

    <SwitchPreference
        android:key="preference_lock_video"
        android:title="@string/preference_lock_video"
        android:summary="@string/preference_lock_video_summary"
        android:defaultValue="false"
        />

    <ListPreference
        android:key="preference_video_subtitle"
        android:title="@string/preference_video_subtitle"
        android:summary="@string/preference_video_subtitle_summary"
        android:entries="@array/preference_video_subtitle_entries"
        android:entryValues="@array/preference_video_subtitle_values"
        android:defaultValue="preference_video_subtitle_no"
        />

    <PreferenceCategory
        android:key="preference_category_video_debugging"
        android:title="@string/preference_category_video_debugging"
        >

        <ListPreference
            android:key="preference_video_bitrate"
            android:title="@string/preference_video_bitrate"
            android:summary="@string/preference_video_bitrate_summary"
            android:entries="@array/preference_video_bitrate_entries"
            android:entryValues="@array/preference_video_bitrate_values"
            android:defaultValue="default"
            />

        <ListPreference
            android:key="preference_video_fps"
            android:title="@string/preference_video_fps"
            android:summary="@string/preference_video_fps_summary"
            android:defaultValue="default"
            />

        <!--  if we move this to another PreferenceGroup, we should update code for the findPreference() call -->
        <SwitchPreference
            android:key="preference_force_video_4k"
            android:title="@string/preference_force_video_4k"
            android:summary="@string/preference_force_video_4k_summary"
            android:defaultValue="false"
            />

        <SwitchPreference
            android:key="preference_video_low_power_check"
            android:title="@string/preference_video_low_power_check"
            android:summary="@string/preference_video_low_power_check_summary"
            android:defaultValue="true"
            />

        <SwitchPreference
            android:key="preference_video_flash"
            android:title="@string/preference_video_flash"
            android:summary="@string/preference_video_flash_summary"
            android:defaultValue="false"
            />

    </PreferenceCategory>

    <!-- OMT Network Streaming -->
    <PreferenceCategory
        android:key="preference_category_omt_streaming"
        android:title="OMT Network Streaming"
        >

        <SwitchPreference
            android:key="preference_omt_streaming_enabled"
            android:title="Enable OMT Streaming"
            android:summary="Stream video over network using Open Media Transport protocol"
            android:defaultValue="true"
            />

        <ListPreference
            android:key="preference_omt_streaming_quality"
            android:title="Streaming Quality"
            android:summary="Low recommended for WiFi stability"
            android:entries="@array/preference_omt_quality_entries"
            android:entryValues="@array/preference_omt_quality_values"
            android:defaultValue="1"
            android:dependency="preference_omt_streaming_enabled"
            />

        <EditTextPreference
            android:key="preference_omt_streaming_name"
            android:title="Stream Name"
            android:summary="Leave empty for auto-generated unique name"
            android:defaultValue=""
            android:dependency="preference_omt_streaming_enabled"
            />

    </PreferenceCategory>

</PreferenceScreen>
